--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.ndexbio</groupId>
   <artifactId>ndex-object-model</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>NDEx Java Object Model</name>
   <description>Java object model for applications that access NDEx</description>
   <dependencies>
