--- a/pom.xml
+++ b/pom.xml
@@ -31,12 +31,34 @@
   <build>
     <plugins>
       <plugin>
+        <version>3.3</version>
         <artifactId>maven-compiler-plugin</artifactId>
           <configuration>
             <source>1.7</source>
             <target>1.7</target>
           </configuration>
       </plugin>
+      
+      <plugin>
+   <groupId>com.mycila</groupId>
+   <artifactId>license-maven-plugin</artifactId>
+   <version>2.6</version>
+   <configuration>
+      <header>${basedir}/misc/license_header.txt</header>
+      <properties>
+         <inceptionYear>${project.inceptionYear}</inceptionYear>
+      </properties>
+      <includes>
+         <include>src/**/*.java</include>
+         <include>src/**/*.xml</include>
+      </includes>
+      <excludes>
+         <exclude>**/logback.xml</exclude>
+         <exclude>**/logback-test.xml</exclude>
+         <exclude>**/src/test/resources/**</exclude>
+      </excludes>
+   </configuration>
+</plugin>
     </plugins>
   </build>
 
