--- a/pom.xml
+++ b/pom.xml
@@ -17,17 +17,11 @@
 
 		<dependency>
 			<groupId>junit</groupId>
-			<artifactId>junit-dep</artifactId>
+			<artifactId>junit</artifactId>
 			<version>4.11</version>
 		</dependency>
   </dependencies>
   
-<!--  
-  <properties>
-    <maven.compiler.target>1.7</maven.compiler.target>
-    <maven.compiler.source>1.7</maven.compiler.source>
-  </properties>
--->
 
   <build>
     <pluginManagement>
