--- a/pom.xml
+++ b/pom.xml
@@ -1,116 +1,114 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.ndexbio</groupId>
-  <artifactId>ndex-object-model</artifactId>
-  <version>2.1.0</version>
-  <name>NDEx Java Object Model</name>
-  <description>Java object model for applications that access NDEx</description>
-  <inceptionYear>2013</inceptionYear>
-  <dependencies>
-  		<!-- 3rd party libraries -->
-  		
-  		<dependency>
-           	<groupId>org.ndexbio.cxio</groupId>
-  			<artifactId>ndex-cxio</artifactId>
-  			<version>1.0.0</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.ndexbio</groupId>
+	<artifactId>ndex-object-model</artifactId>
+	<version>2.1.0</version>
+	<name>NDEx Java Object Model</name>
+	<description>Java object model for applications that access NDEx</description>
+	<inceptionYear>2013</inceptionYear>
+	<dependencies>
+		<!-- 3rd party libraries -->
+
+		<dependency>
+			<groupId>org.ndexbio.cxio</groupId>
+			<artifactId>ndex-cxio</artifactId>
+			<version>1.0.0</version>
 		</dependency>
-  		
-     <!--    <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.5.2</version>
-        </dependency> -->
+
+		<!-- <dependency> <groupId>com.fasterxml.jackson.core</groupId> <artifactId>jackson-databind</artifactId> 
+			<version>2.5.2</version> </dependency> -->
 
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
-  </dependencies>
-  
+	</dependencies>
 
-  <build>
-    <pluginManagement>
-    <plugins>
-      <plugin>
-        <version>3.3</version>
-        <artifactId>maven-compiler-plugin</artifactId>
-          <configuration>
-            <source>1.7</source>
-            <target>1.7</target>
-          </configuration>
-      </plugin>
-      
-      <plugin>
-   <groupId>com.mycila</groupId>
-   <artifactId>license-maven-plugin</artifactId>
-   <version>2.11</version>
-   <configuration>
-      <header>${basedir}/misc/license_header.txt</header>
-      <properties>
-         <inceptionYear>${project.inceptionYear}</inceptionYear>
-         <year>${year}</year>
-      </properties>
-      <includes>
-         <include>src/**/*.java</include>
-         <include>src/**/*.xml</include>
-      </includes>
-      <excludes>
-         <exclude>**/logback.xml</exclude>
-         <exclude>**/logback-test.xml</exclude>
-         <exclude>**/src/test/resources/**</exclude>
-      </excludes>
-        <executions>
-        <execution>
-            <goals>
-                <goal>check</goal>
-            </goals>
-        </execution>
-    </executions>
-   </configuration>
-</plugin>
- <plugin>
-        <groupId>com.keyboardsamurais.maven</groupId>
-        <artifactId>maven-timestamp-plugin</artifactId>
-        <version>1.0</version>
-        <executions>
-          <execution>
-            <id>date</id>
-            <goals>
-              <goal>create</goal>
-            </goals>
-            <configuration>
-              <propertyName>date</propertyName>
-              <timestampPattern>yyyy-MM-dd</timestampPattern>
-            </configuration>
-          </execution>
-          <execution>
-            <id>year</id>
-            <goals>
-              <goal>create</goal>
-            </goals>
-            <configuration>
-              <propertyName>year</propertyName>
-              <timestampPattern>yyyy</timestampPattern>
-            </configuration>
-          </execution>
-          <execution>
-            <id>year-site</id>
-            <phase>pre-site</phase>
-            <goals>
-              <goal>create</goal>
-            </goals>
-            <configuration>
-              <propertyName>year</propertyName>
-              <timestampPattern>yyyy</timestampPattern>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
 
-    </plugins>
-    </pluginManagement>
-  </build>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<version>3.3</version>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<source>1.7</source>
+						<target>1.7</target>
+					</configuration>
+				</plugin>
+
+				<plugin>
+					<groupId>com.mycila</groupId>
+					<artifactId>license-maven-plugin</artifactId>
+					<version>2.11</version>
+					<configuration>
+						<header>${basedir}/misc/license_header.txt</header>
+						<properties>
+							<inceptionYear>${project.inceptionYear}</inceptionYear>
+							<year>${year}</year>
+						</properties>
+						<includes>
+							<include>src/**/*.java</include>
+							<include>src/**/*.xml</include>
+						</includes>
+						<excludes>
+							<exclude>**/logback.xml</exclude>
+							<exclude>**/logback-test.xml</exclude>
+							<exclude>**/src/test/resources/**</exclude>
+						</excludes>
+						<executions>
+							<execution>
+								<goals>
+									<goal>check</goal>
+								</goals>
+							</execution>
+						</executions>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>com.keyboardsamurais.maven</groupId>
+					<artifactId>maven-timestamp-plugin</artifactId>
+					<version>1.0</version>
+					<executions>
+						<execution>
+							<id>date</id>
+							<goals>
+								<goal>create</goal>
+							</goals>
+							<configuration>
+								<propertyName>date</propertyName>
+								<timestampPattern>yyyy-MM-dd</timestampPattern>
+							</configuration>
+						</execution>
+						<execution>
+							<id>year</id>
+							<goals>
+								<goal>create</goal>
+							</goals>
+							<configuration>
+								<propertyName>year</propertyName>
+								<timestampPattern>yyyy</timestampPattern>
+							</configuration>
+						</execution>
+						<execution>
+							<id>year-site</id>
+							<phase>pre-site</phase>
+							<goals>
+								<goal>create</goal>
+							</goals>
+							<configuration>
+								<propertyName>year</propertyName>
+								<timestampPattern>yyyy</timestampPattern>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+
+			</plugins>
+		</pluginManagement>
+	</build>
 
 
 </project>
