--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
+            <dependency>
+                <groupId>org.easymock</groupId>
+                <artifactId>easymock</artifactId>
+                <version>4.0.2</version>
+                <scope>test</scope>
+            </dependency>
 	</dependencies>
 
 
