--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.ndexbio</groupId>
 	<artifactId>ndex-object-model</artifactId>
-	<version>2.4.1</version>
+	<version>2.4.2</version>
 	<name>NDEx Java Object Model</name>
 	<description>Java object model for applications that access NDEx</description>
 	<inceptionYear>2013</inceptionYear>
@@ -156,6 +156,7 @@
     </reporting>
 
     <properties>
-            <jackson.version>2.9.4</jackson.version>
+            <jackson.version>2.9.9</jackson.version>
+            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 </project>
