--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.ndexbio</groupId>
 	<artifactId>ndex-object-model</artifactId>
-	<version>2.4.3</version>
+	<version>2.4.4</version>
 	<name>NDEx Java Object Model</name>
 	<description>Java object model for applications that access NDEx</description>
 	<inceptionYear>2013</inceptionYear>
@@ -30,6 +30,12 @@
             <version>${jackson.version}</version>
         </dependency>
 
+       <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -158,5 +164,6 @@
     <properties>
             <jackson.version>2.9.9</jackson.version>
             <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+            <swagger.version>2.0.0</swagger.version>
     </properties>
 </project>
