--- a/pom.xml
+++ b/pom.xml
@@ -8,18 +8,18 @@
 	<description>Java object model for applications that access NDEx</description>
 	<inceptionYear>2013</inceptionYear>
 	
-<distributionManagement>
-    <repository>
-        <id>releases</id>
-        <name>Internal Releases</name>
-        <url>http://code.cytoscape.org/nexus/content/repositories/releases</url>
-    </repository>
-    <snapshotRepository>
-        <id>snapshots</id>
-        <name>Internal Snapshots</name>
-        <url>http://code.cytoscape.org/nexus/content/repositories/snapshots</url>
-    </snapshotRepository>
-</distributionManagement>
+    <distributionManagement>
+        <repository>
+            <id>cytoscape_releases</id>
+            <name>Cytoscape Releases</name>
+            <url>http://nrnb-nexus.ucsd.edu/repository/cytoscape_releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>cytoscape_snapshots</id>
+            <name>Cytoscape Snapshots</name>
+            <url>http://nrnb-nexus.ucsd.edu/repository/cytoscape_snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 	
     <dependencies>
             <!-- 3rd party libraries -->
