--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.ndexbio</groupId>
 	<artifactId>ndex-object-model</artifactId>
-	<version>2.4.5</version>
+	<version>2.5.0-SNAPSHOT</version>
 	<name>NDEx Java Object Model</name>
 	<description>Java object model for applications that access NDEx</description>
 	<inceptionYear>2013</inceptionYear>
@@ -162,7 +162,7 @@
     </reporting>
 
     <properties>
-            <jackson.version>2.9.10.3</jackson.version>
+            <jackson.version>2.10.3</jackson.version>
             <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
             <swagger.version>2.0.0</swagger.version>
     </properties>
