--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.ndexbio</groupId>
 	<artifactId>ndex-object-model</artifactId>
-	<version>2.5.2</version>
+	<version>2.5.3-SNAPSHOT</version>
 	<name>NDEx Java Object Model</name>
 	<description>Java object model for applications that access NDEx</description>
 	<inceptionYear>2013</inceptionYear>
