--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.ndexbio</groupId>
 	<artifactId>ndex-object-model</artifactId>
-	<version>2.5.6</version>
+	<version>2.5.7-SNAPSHOT</version>
 	<name>NDEx Java Object Model</name>
 	<description>Java object model for applications that access NDEx</description>
 	<inceptionYear>2013</inceptionYear>
@@ -199,8 +199,8 @@
 	</reporting>
 
 	<properties>
-		<jackson.version>2.14.3</jackson.version>
+		<jackson.version>2.17.1</jackson.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<swagger.version>2.0.0</swagger.version>
+		<swagger.version>2.2.21</swagger.version>
 	</properties>
 </project>
